2003-06-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/gui.c (gui_set_status_prompt_new_game): Reworded the message
	to get rid of the awkward "->" thing.

	* data/gnect.schemas.in: Change the default keys to be the arrow
	keys.

2003-06-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/prefs.c: 
	* src/prefs.h: 
	* data/gnect.schemas.in:
	* src/gui.c: Removed the "are you sure" questions.

	* src/prefs.c: Removed dead code from the preferences response
	callback (actually deleted the entire function and made the
	callback gtk_widget_hide).

2003-06-10  William Jon McCann  <mccann@jhu.edu>

	* src/prefs.c (cb_prefs_gconf_verify_changed): HIG fixes for
	preferences dialog.

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* src/dialog.c: 
	* src/gui.c: 
	* src/prefs.c: Removed separator from dialogs as in HIG.

2003-06-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/gui.c: UI consistency (see bug #114447).

2003-06-05  William Jon McCann  <mccann@jhu.edu>

	* data/Makefile.am (install-data-local): Only install schemas
	if they are requested.

2003-05-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/prefs.c (prefs_dialog): 
	* src/dialog.c (dialog_score):
	* src/dialog.c (dialog_about): Use gtk_window_present for the
	dialogs. Fixes bug #113892. Thanks to Steve Chaplin.

2003-04-06  Ross Burton  <ross@burtonini.com>

	* src/main.h: Fixes for Sun. Thanks to Rick Burridge, closing
	#109989.

2003-03-07  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am: Link to the shared games library.

	* src/prefs.c (prefs_init): Use the shared sanity check.

2003-02-24  Jeremy Katz  <katzj@redhat.com>

	* data/gnect.schemas.in: add applyto to schemas (closes #106903)

2002-12-17  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am (schema_in_files): Fix the GConf schema path.

2002-11-29  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am (EXTRA_DIST): Put the source of the schemas in
	the dist, not the generated files.
