@@ -68,7 +68,6 @@ Glines:
         - Clean up the classic theme.
         
 Gnect:
-        - Controls aren't a11y (bug 97327)
 
 Gnibbles:
         
@@ -76,6 +75,8 @@ Gnobots2:
         - Find out why it crashes for some people (bugs 92297, 102370,
           112059, 113186, 113657).
         - Fix no-moves issue (bug 107846).
+        - Since we can't change some settings mid-game an end-game option
+          would be good.
 
 Gnome-stones:
         - Fixup the horrible problems in the prefs dialog like the
